# NeverSkipYourContent

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
client/ai-agent/: pyproject.toml
client/ai-agent/core/agent/: __init__.py  llm.py  runner.py
client/ai-agent/core/agent/tools/: __init__.py  mcp_tools.py
client/ai-agent/core/config/: __init__.py  loaders.py  models.py  settings.py
client/ai-agent/core/interface/: cli.py
configs/: claude_desktop_config.json
docs/: README.zh.md  development_roadmap.md  git-strategy.md  intro.md  page_analyzer_design.md  project_structure.md  rough_implementation_guide.md
docs/progress/: page_analyzer_server_implementation.md  web_search_server_implementation.md
scripts/: README.md  generate_claude_config.py
servers/page_analyzer/: README.md  pyproject.toml  run_server.py  test_tools.py
servers/page_analyzer/src/page_analyzer/: __init__.py  analysis_manager.py  analysis_types.py  server.py
servers/page_analyzer/src/page_analyzer/analyzers/: __init__.py  api_analyzer.py  feed_analyzer.py  html_analyzer.py
servers/page_analyzer/tests/: __init__.py  conftest.py  test_analysis_manager.py
servers/query_gen/src/query_gen/: server.py
servers/query_generator/: pyproject.toml
servers/query_generator/src/query_generator/: server.py
servers/web_search/: .env.example  README.md  pyproject.toml  run_server.py  run_tests.py  test_tools.py
servers/web_search/src/web_search/: __init__.py  search_manager.py  search_types.py  server.py
servers/web_search/src/web_search/providers/: __init__.py  base.py  claude_provider.py  duckduckgo_provider.py  perplexity_provider.py  serpapi_provider.py  tavily_provider.py
servers/web_search/tests/: README.md  conftest.py  pytest.ini  test_providers.py  test_search_manager.py  test_server.py
