[project]
name = "page-analyzer"
version = "0.1.0"
description = "MCP server for web page content analysis and extraction with multi-format support"
authors = [
    {name = "NSYC", email = "nsyc@example.com"}
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.10",
    "readability-lxml>=0.8.1",
    "langdetect>=1.0.9",
    "python-dateutil>=2.8.2",
    "lxml>=4.9.3",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "asyncio-throttle>=1.0.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/page_analyzer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long