[project]
name = "query-generator"
version = "0.1.0"
description = "MCP server for intelligent search query generation with category-specific optimization"
authors = [
    {name = "NSYC", email = "nsyc@example.com"}
]
dependencies = [
    "mcp>=1.0.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/query_generator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long